--- a/app/views/spree/admin/sale_prices/_table.html.erb
+++ b/app/views/spree/admin/sale_prices/_table.html.erb
@@ -3,6 +3,7 @@
     <col />
     <col />
     <col />
+    <col />
     <col style="width: 30%" />
     <col style="width: 30%" />
     <col />
@@ -14,6 +15,7 @@
       <th><%= Spree.t('sku') %></th>
       <th><%= Spree.t('sale_price_active') %></th>
       <th><%= Spree.t('sale_price') %></th>
+      <th><%= Spree.t('original_price') %></th>
       <th><%= Spree.t('sale_price_start_at') %></th>
       <th><%= Spree.t('sale_price_end_at') %></th>
       <th><%= Spree.t('sale_price_enabled') %></th>
