--- a/app/views/spree/admin/sale_type_prices/sale_prices/_table.html.erb
+++ b/app/views/spree/admin/sale_type_prices/sale_prices/_table.html.erb
@@ -1,4 +1,4 @@
-<table id="product_sale_prices" class="index" data-hook="sale_price_table">
+<table id="sale_type_price_sale_prices" class="index" data-hook="sale_price_table">
   <colgroup>
     <col />
     <col />
@@ -11,7 +11,7 @@
   </colgroup>
 
   <thead>
-    <tr data-hook="products_header">
+    <tr data-hook="sale_type_prices_header">
       <th><%= Spree.t('sku') %></th>
       <th><%= Spree.t('sale_price_active') %></th>
       <th><%= Spree.t('sale_price') %></th>
@@ -24,14 +24,6 @@
   </thead>
 
   <tbody>
-    <% if @product.present? %>
-      <% if @product.variants.any? %>
-        <%= render partial: "sale_price", collection: @product.variants.flat_map(&:sale_prices) %>
-      <% else %>
-        <%= render partial: "sale_price", collection: @product.master.sale_prices %>
-      <% end %>
-    <% elsif @sale_type_price.present? %>
-      <%= render partial: "sale_price", collection: @sale_type_price.sale_prices %>
-    <% end %>
+    <%= render partial: "spree/admin/sale_type_prices/sale_prices/sale_price", collection: @sale_type_price.sale_prices %>
   </tbody>
 </table>
