--- a/app/views/spree/admin/sale_type_prices/_tabs.html.erb
+++ b/app/views/spree/admin/sale_type_prices/_tabs.html.erb
@@ -1,5 +1,5 @@
 <% content_for :page_title do %>
-  <%= Spree.t(:editing_product) %> &ldquo;<%= @sale_type_price.name %>&rdquo;
+  <%= Spree.t(:sale_type_price_editing) %> &ldquo;<%= @sale_type_price.name %>&rdquo;
 <% end %>
 
 <% content_for :sidebar_title do %>
