--- a/app/views/spree/admin/sale_type_prices/sale_prices/_add.html.erb
+++ b/app/views/spree/admin/sale_type_prices/sale_prices/_add.html.erb
@@ -2,7 +2,7 @@
 <div id="add-line-item">
   <fieldset>
     <legend align="center">
-      <%= Spree.t('add_product_sale_prices') %>
+      <%= Spree.t('add_product_to_sale_price') %>
     </legend>
 
     <%= form_for [:admin, @sale_type_price, Spree::SalePrice.new], remote: true do |f| %>
