--- a/app/views/spree/admin/sale_type_prices/sale_prices/_table.html.erb
+++ b/app/views/spree/admin/sale_type_prices/sale_prices/_table.html.erb
@@ -15,7 +15,7 @@
       <th><%= Spree.t('sku') %></th>
       <th><%= Spree.t('sale_price_active') %></th>
       <th><%= Spree.t('sale_price') %></th>
-      <th><%= Spree.t('original_price') %></th>
+      <th><%= I18n.t('original_price') %></th>
       <th><%= Spree.t('sale_price_start_at') %></th>
       <th><%= Spree.t('sale_price_end_at') %></th>
       <th><%= Spree.t('sale_price_enabled') %></th>
