--- a/app/views/spree/admin/sale_prices/index.html.erb
+++ b/app/views/spree/admin/sale_prices/index.html.erb
@@ -31,11 +31,11 @@
       <div class="row">
         <div class="columns three">
           <%= f.label :start_at, t('sale_price_start_at') %>
-          <%= f.text_field :start_at, class: "datepicker" %>
+          <%= f.text_field :start_at, class: "datetimepicker" %>
         </div>
         <div class="columns three">
           <%= f.label :end_at, t('sale_price_end_at') %>
-          <%= f.text_field :end_at, class: "datepicker" %>
+          <%= f.text_field :end_at, class: "datetimepicker" %>
         </div>
         <div class="columns three">
           <%= f.label :submit, style: 'visibility: hidden;' %>
