--- a/app/views/spree/admin/sale_prices/index.html.erb
+++ b/app/views/spree/admin/sale_prices/index.html.erb
@@ -30,6 +30,14 @@
 
       <div class="row">
         <div class="columns three">
+          <%= label_tag 'variant_ids[]', Spree.t('variants') %>
+          <%= select_tag 'variant_ids[]', options_from_collection_for_select(@product.variants, :id, :sku),
+                         multiple: 'multiple', class: 'variant_sales_picker' %>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="columns three">
           <%= f.label :start_at, t('sale_price_start_at') %>
           <%= f.text_field :start_at, class: "datetimepicker" %>
         </div>
