--- a/app/views/spree/admin/sale_prices/create.js.erb
+++ b/app/views/spree/admin/sale_prices/create.js.erb
@@ -1,1 +1,1 @@
-$('table#product_sale_prices').replaceWith('<%= j render partial: "table", locals: {product: @product} %>');
+$('table#product_sale_prices tbody').html('<%=j render(partial: "sale_price", collection: @sale_prices) %>');
