--- a/app/views/spree/admin/sale_prices/index.html.erb
+++ b/app/views/spree/admin/sale_prices/index.html.erb
@@ -55,5 +55,5 @@
 </div>
 
 <div id="product-sale-prices-table">
-  <%= render partial: "table", locals: { product: @product } %>
+  <%= render partial: "table", locals: { sale_prices: @sale_prices } %>
 </div>
