--- a/app/views/spree/admin/sale_prices/_table.html.erb
+++ b/app/views/spree/admin/sale_prices/_table.html.erb
@@ -11,7 +11,7 @@
 
   <thead>
     <tr data-hook="products_header">
-      <th><%= Spree.t('name') %></th>
+      <th><%= Spree.t('sku') %></th>
       <th><%= Spree.t('sale_price_active') %></th>
       <th><%= Spree.t('sale_price') %></th>
       <th><%= Spree.t('sale_price_start_at') %></th>
